# zowe-client

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml
config/: .zowe.env.json  zowe.config.json
docs/: index.md
docs/getting-started/: prerequisites.md
docs/stylesheets/: extra.css
